--- a/src/components/Rating.css
+++ b/src/components/Rating.css
@@ -1,150 +1,145 @@
-.rating{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    margin-top: 10px;
+.rating {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  margin-top: 10px;
 }
 
-.rating > fieldset
-{
-    text-align: center;
-    display: contents;
+.rating > fieldset {
+  text-align: center;
+  display: contents;
 }
 
-.rating > fieldset:not(:checked) > input 
-{
-    position: absolute;
-    top: -9999px;
+.rating > fieldset:not(:checked) > input {
+  position: absolute;
+  top: -9999px;
 }
 
-.rating > fieldset:not(:checked) > label
-{
-    float: right;
-    padding: 4px;
-    width: 30px;
-    height: 30px;
-    z-index: 100;
-    background-color: #d9d9d9;;
-    border-radius: 50%;
-    overflow: hidden;
-    cursor: pointer;
-    color: black;
+.rating > fieldset:not(:checked) > label {
+  float: right;
+  padding: 4px;
+  width: 30px;
+  height: 30px;
+  z-index: 100;
+  background-color: #d9d9d9;
+  border-radius: 50%;
+  overflow: hidden;
+  cursor: pointer;
+  color: black;
 }
 
-.rating > fieldset:not(:checked) > label:hover
-{
-    border: 4px solid #00ca9b;
-    background-color: white;
-    color: #00ca9b;
-    transition: color 0.2s;
-    padding: 0px;
+.rating > fieldset:not(:checked) > label:hover {
+  border: 4px solid #00ca9b;
+  background-color: white;
+  color: #00ca9b;
+  transition: color 0.2s;
+  padding: 0px;
 }
 
 .hr-line {
-    width: 20%;
-    position: relative;
-    top:0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 10;
-    margin: 15px -20px auto;
-    border-bottom: 4px solid #d9d9d9;
+  width: 20%;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  margin: 15px -20px auto;
+  border-bottom: 4px solid #d9d9d9;
 }
 
 .rating > fieldset:not(:checked) > input:checked ~ label,
-input[type="radio"]:checked ~ .hr-line
-{
-    background-color: #00ca9b;
-    border-color: #00ca9b;
-    color: white;
-    transition: color 0.2s;
-
+input[type="radio"]:checked ~ .hr-line {
+  background-color: #00ca9b;
+  border-color: #00ca9b;
+  color: white;
+  transition: color 0.2s;
 }
 
-
-
-.rating-text{
-    display: flex;
-    justify-content: space-between;
-    color: #8f9097;
-    font-size: 12.64px;
+.rating-text {
+  display: flex;
+  justify-content: space-between;
+  color: #8f9097;
+  font-size: 12.64px;
 }
 
-.product, .about, .boughtFor{
-    display: flex;
-    flex-direction: column;
+.product,
+.about,
+.boughtFor {
+  display: flex;
+  flex-direction: column;
 }
 
 .product span:nth-child(2),
 .boughtFor span:nth-child(2),
-.about span:nth-child(3){
-    color: #8f9097;
-    font-size: 12.64px;
+.about span:nth-child(3) {
+  color: #8f9097;
+  font-size: 12.64px;
 }
 
 .product-rating,
 .age-groups,
-.buying-reasons
-{
-    display: inline-block;
+.buying-reasons {
+  display: inline-block;
 }
 
 .product-rating input[type="checkbox"],
 .age-groups input[type="radio"],
-.buying-reasons input[type="radio"]
-{
-    display: none;
-    z-index: 100;
+.buying-reasons input[type="radio"] {
+  display: none;
+  z-index: 100;
 }
-  
-.product-rating input[type="checkbox"]:checked+label,
-.age-groups input[type="radio"]:checked+label,
-.buying-reasons input[type="radio"]:checked+label
-{
-    background-color: #00ca9b;
-    border-color: #00ca9b;
-    color: #ffffff;
+
+.product-rating input[type="checkbox"]:checked + label,
+.age-groups input[type="radio"]:checked + label,
+.buying-reasons input[type="radio"]:checked + label {
+  background-color: #00ca9b;
+  border-color: #00ca9b;
+  color: #ffffff;
 }
 
 .productRatingLabel,
 .ageGroupLabel,
-.buyingReasonLabel
-{
-    background-color: #d9d9d9;
-    border: 2px solid #d9d9d9;
-    border-radius: 4px;
-    padding: 4px 8px;
-    transition: background .2s ease;
-    margin: 0 4px 8px 0;
+.buyingReasonLabel {
+  background-color: #d9d9d9;
+  border: 2px solid #d9d9d9;
+  border-radius: 4px;
+  padding: 4px 8px;
+  transition: background 0.2s ease;
+  margin: 0 4px 8px 0;
 }
 
 .productRatingLabel:hover,
 .ageGroupLabel:hover,
-.buyingReasonLabel:hover
-{
-    background: #c2c2c2;
-    border-color: #c2c2c2;
+.buyingReasonLabel:hover {
+  background: #c2c2c2;
+  border-color: #c2c2c2;
 }
 
-footer.next{
-    margin: 32px auto 16px;
-    text-align: center;
+input[type="checkbox"]:not(:checked)+ label.disabled {
+    pointer-events: none;
+    color: #8f9097;
 }
 
-select[name=rcrs-country]{
-    background-color: #fff;
-    border: 1px solid #c2c2c2;
-    border-radius: 4px;
-    font-size: 14px;
-    height: 34px;
-    margin:8px 0 0;
-    max-width: 100%;
-    padding: 7px;
-    vertical-align: top;
+
+footer.next {
+  margin: 32px auto 16px;
+  text-align: center;
 }
 
-.steps{
-    display: flex;
-    justify-content: space-around;
+select[name="rcrs-country"] {
+  background-color: #fff;
+  border: 1px solid #c2c2c2;
+  border-radius: 4px;
+  font-size: 14px;
+  height: 34px;
+  margin: 8px 0 0;
+  max-width: 100%;
+  padding: 7px;
+  vertical-align: top;
+}
+
+.steps {
+  display: flex;
+  justify-content: space-around;
 }
