updated both components

--- a/src/components/Rating.css
+++ b/src/components/Rating.css
@@ -117,8 +117,12 @@ input[type="radio"]:checked ~ .hr-line {
 }
 
 input[type="checkbox"]:not(:checked)+ label.disabled {
-    pointer-events: none;
+    cursor: not-allowed;
     color: #8f9097;
+}
+input[type="checkbox"]:not(:checked)+ label.disabled:hover {
+    background-color: #d9d9d9;
+    border: 2px solid #d9d9d9;
 }
 
 
